# url-shortener

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  url-shortener-sevice.yml
doc/adr/: 0001-record-architecture-decisions.md  0002-url_shortener_architecture.md  0003-url_shortener_architecture_with_global_counter.md
doc/images/: url_shortener_system_architecture.drawio
src/: dependencies.py  main.py
src/adapter/incoming/: urls.py
src/adapter/incoming/api/: long_url.py
src/adapter/outgoing/: database.py  redis_short_code_repository.py  relational_db_url_repository.py  url_model.py
src/application/: dependencies.py
src/application/port/incoming/: ShorteningService.py
src/application/port/outgoing/: short_code_repository.py  url_repository.py
src/application/service/: url_shortening_service.py
src/domain/model/: url.py
src/infra/: settings.py
tests/: test_url.py  test_url_shortening_service.py
tests_integration/: conftest.py  db_setup.py  test_short_code.py  test_urls_endpoints.py
