[project]
name = "url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.121.0",
    "greenlet>=3.2.4",
    "pydantic-settings>=2.11.0",
    "shortuuid>=1.0.13",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "asyncpg>=0.30.0",
    "monkeypatch>=0.1rc3",
    "psycopg>=3.2.12",
    "psycopg-binary>=3.2.12",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.3",
    "testcontainers>=4.13.2",
]
